--- a/style.css
+++ b/style.css
@@ -5,13 +5,15 @@ html{
 }
 
 body{
-    background: whitesmoke;
+  background: #141E30;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
 overflow-x: hidden;
 overflow-y: hidden;
 }
 
 .menu{ 
-    background-color: black;
+    background-color: rgba(20, 21, 32, 0.418) ;
     font-weight: bold;
     font-size: 18px;
     height: 70px;
@@ -30,8 +32,55 @@ overflow-y: hidden;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     float: left;
     margin: 10px;
-    padding: 5px    ;
+    padding: 5px;
+    padding-left: 20px;
     color: white;
+
+}
+
+.container-form {
+  display: flex;
+
+}
+
+.search:hover{
+  box-shadow: 0 0 5px #03e9f4,
+  0 0 25px #03e9f4,
+  0 0 50px #03e9f4,
+  0 0 100px #03e9f4;
+}
+
+.search {
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  padding-left: 5px;
+  height: 25px;
+  width: 300px;
+  border-radius: 5px;
+  padding: 10px;
+  transition: 0.5s;
+}
+
+
+.button-search {
+  height: 25px;
+  width: 50px;
+  margin-left: 10px;
+  font-size: 10px;
+  border-radius: 5px;
+  background-color: #141E30;
+  color: #fff;
+  border-color: #fff;
+  transition: 0.5s;
+ 
+ 
+
+}
+.button-search:hover{
+  color: black;
+  background-color: #fff;
 
 }
 
@@ -146,17 +195,18 @@ overflow-y: hidden;
 
 .menu ul li:hover .dropdown {
     display: grid;
-    background: white;
+    background: rgba(20, 21, 32, 0.418);
     position: absolute;
     padding: 10px;
 }
 
 /* mobile */
 
-@media screen and (width <=500px) {
+@media screen and (max-width :767px) {
     .label {font-size: 15pt;
     position: absolute;
-    left: 0;}
+    left: 0;
+    padding-left: 0px;}
     .menu {height: 40px;
     justify-content: flex-end;}
     .menu ul {position: absolute;
@@ -171,17 +221,28 @@ overflow-y: hidden;
 z-index: -1;
 background-color: black;
 transform: translateX(100%);
-transition: all 1s;
-}
+transition: all 1s;}
+.search {display: none;}
+.button-search {display: none;}
 .menu ul.slide {
   transform: translateX(0);
-  opacity: 1;
+  opacity: 1;}
+  .hamburger {padding: 10px 10px;}
 }
-    .hamburger {padding: 10px 10px;}
-}
-/* tablet or pc */
-@media screen and (width >500px) {
+/* tablet*/
+@media screen and (min-width:767px) and (max-width :1023px) {
     .hamburger {display: none;}
-    .menu ul {}
+    .label {font-size: 15pt;
+      left: 0;
+      padding-left: 0px;}
+    .menu ul {display: flex;
+    background-color: #03e9f4;}
+    .search {width: 200px;}
+    .button-search {}
     
+}@media screen and (width >1023px){
+  .container-form {display: flex;}
+  .hamburger {display: none;}
+  .menu ul {display: flex;}
+
 }
